# fils_de_fer

./: CMakeLists.txt  Makefile  README.md  fdf  leaks.txt  test_map.fdf
includes/: fdf.h  structs.h
libft/: Makefile  a.out  ft_putstr_fd.c  ft_strerr.c  libft.h  main.c
libft/ft_printf/includes/: ft_printf.h
libft/includes/: libft.h
libft/src/: ft_backn_gnl.c  ft_free_grid.c  ft_htoi.c  ft_putstr_fd.c  ft_strerr.c  ft_strjoin_free.c  get_next_line.c
sources/: counting_rotation.c  draw.c  error.c  free.c  hooks.c  init_fdf.c  init_line.c  is_valid.c  key_handling.c  main.c  rotation.c  using_algo.c
test_maps/: 42.fdf  mars.fdf
