cmake_minimum_required(VERSION 3.14)
project(fils_de_fer C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)
include_directories(minilibx)
include_directories(minilibx_macos)

add_executable(fils_de_fer
        includes/fdf.h
        includes/structs.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/src/ft_atoi.c
        libft/src/ft_backn_gnl.c
        libft/src/ft_buffering.c
        libft/src/ft_bzero.c
        libft/src/ft_charinstr.c
        libft/src/ft_coloring.c
        libft/src/ft_conversion.c
        libft/src/ft_display.c
        libft/src/ft_find_whitespaces.c
        libft/src/ft_free_grid.c
        libft/src/ft_htoi.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalpha.c
        libft/src/ft_isascii.c
        libft/src/ft_isdigit.c
        libft/src/ft_isprint.c
        libft/src/ft_itoa.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_lstsort.c
        libft/src/ft_maxlen_base.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_nbrlen.c
        libft/src/ft_number_puts.c
        libft/src/ft_parsing.c
        libft/src/ft_pointers.c
        libft/src/ft_pow.c
        libft/src/ft_printf.c
        libft/src/ft_printf_itoa.c
        libft/src/ft_put_uint_base.c
        libft/src/ft_put_uintmax.c
        libft/src/ft_put_uintmax_base.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_puts.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_putwchar.c
        libft/src/ft_putwstr.c
        libft/src/ft_range.c
        libft/src/ft_rgb_to_int.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strchri.c
        libft/src/ft_strclen.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strequ.c
        libft/src/ft_strerr.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strjoin_free.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnlen.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strrev.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_swap.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_wstrlen.c
        libft/src/ft_wstrncpy.c
        libft/src/ft_wstrsub.c
        libft/src/get_next_line.c
        minilibx/test/main.c
        minilibx/test/new_win.c
        minilibx/mlx.h
        minilibx/mlx_clear_window.c
        minilibx/mlx_destroy_image.c
        minilibx/mlx_destroy_window.c
        minilibx/mlx_expose_hook.c
        minilibx/mlx_flush_event.c
        minilibx/mlx_get_color_value.c
        minilibx/mlx_get_data_addr.c
        minilibx/mlx_hook.c
        minilibx/mlx_init.c
        minilibx/mlx_int.h
        minilibx/mlx_int_anti_resize_win.c
        minilibx/mlx_int_do_nothing.c
        minilibx/mlx_int_get_visual.c
        minilibx/mlx_int_param_event.c
        minilibx/mlx_int_set_win_event_mask.c
        minilibx/mlx_int_str_to_wordtab.c
        minilibx/mlx_int_wait_first_expose.c
        minilibx/mlx_key_hook.c
        minilibx/mlx_lib_xpm.c
        minilibx/mlx_loop.c
        minilibx/mlx_loop_hook.c
        minilibx/mlx_mouse_hook.c
        minilibx/mlx_new_image.c
        minilibx/mlx_new_window.c
        minilibx/mlx_pixel_put.c
        minilibx/mlx_put_image_to_window.c
        minilibx/mlx_rgb.c
        minilibx/mlx_string_put.c
        minilibx/mlx_xpm.c
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        sources/counting_rotation.c
        sources/draw.c
        sources/error.c
        sources/hooks.c
        sources/init_fdf.c
        sources/init_line.c
        sources/is_valid.c
        sources/key_handling.c
        sources/main.c
        sources/using_algo.c)
